# spy-code

./: .gitignore  Cargo.toml  GIT_INTEGRATION.md  IDE_INTEGRATIONS_README.md  README.md  RESOLVERS.md  SCHEMA.md  embedding.config.example.json  spy.config.json
.github/workflows/: ci.yml  release.yml
configs/mcp/: cursor.json  generic.json
crates/spy-cli/: Cargo.toml
crates/spy-cli/src/: main.rs
crates/spy-core/: Cargo.toml
crates/spy-core/src/: lib.rs
crates/spy-embeddings/: Cargo.toml
crates/spy-embeddings/src/: lib.rs
crates/spy-git/: Cargo.toml
crates/spy-git/src/: lib.rs
crates/spy-graph/: Cargo.toml
crates/spy-graph-ui/: index.html
crates/spy-graph/src/: diff.rs  lib.rs  tfidf.rs
crates/spy-indexer/: Cargo.toml
crates/spy-indexer/src/: lib.rs
crates/spy-indexer/tests/: integration.rs
crates/spy-mcp/: Cargo.toml
crates/spy-mcp/src/: lib.rs
crates/spy-parser/: Cargo.toml
crates/spy-parser/src/: lib.rs
crates/spy-resolvers/: Cargo.toml
crates/spy-resolvers/src/: asset.rs  go.rs  java.rs  lib.rs  python.rs  rust.rs  ts.rs
crates/spy-storage/: Cargo.toml
crates/spy-storage/src/: lib.rs
docs/: AGENT_USAGE.md  ARCHITECTURE.md  CLI_MCP.md  CONFIG.md  EMBEDDINGS.md  GIT_INTEGRATION.md  IDE_INTEGRATIONS.md  INTEGRATIONS.md  MCP_SETUP.md  NODE_ID_SPEC.md  PROGRESS.md  ROADMAP.md  SCHEMA.md  SKILL_REFERENCE.md  TESTING.md
extensions/antigravity-extension/: package-lock.json  package.json
extensions/antigravity-extension/src/: extension.ts
extensions/claude-code-extension/: package-lock.json  package.json
extensions/claude-code-extension/src/: index.ts
extensions/codex-integration/: package-lock.json  package.json
extensions/codex-integration/src/: index.ts
extensions/copilot-extension/: package-lock.json  package.json
extensions/copilot-extension/src/: index.ts
extensions/cursor-extension/: package-lock.json  package.json
extensions/cursor-extension/src/: extension.ts
extensions/cursor-extension/src/sidebar/: sidebarProvider.ts
extensions/spy-code-unified/: package-lock.json  package.json
extensions/spy-code-unified/src/: McpServerManager.ts  SidebarProvider.ts  extension.ts
extensions/spy-code-unified/src/commands/: index.js.map  index.ts
extensions/spy-code-unified/src/providers/: index.js  index.js.map  index.ts
extensions/vscode-extension/: package-lock.json  package.json
extensions/vscode-extension/src/: extension.ts
extensions/vscode-extension/src/sidebar/: sidebarProvider.js.map
extensions/vscode-spy-code/: README.md  package.json
extensions/vscode-spy-code/src/: extension.ts
extensions/windsurf-extension/: package-lock.json  package.json  tsconfig.json
extensions/windsurf-extension/src/: extension.ts
extensions/windsurf-extension/src/commands/: index.ts
ide-adapters/claude-code-adapter/: package-lock.json  package.json
ide-adapters/claude-code-adapter/src/: index.ts
ide-adapters/codex-adapter/: package-lock.json  package.json
ide-adapters/codex-adapter/src/: index.ts
ide-adapters/copilot-adapter/: package-lock.json  package.json
ide-adapters/copilot-adapter/src/: index.ts
ide-adapters/vscode-adapter/: package-lock.json  package.json
ide-adapters/vscode-adapter/src/: index.ts
npm/: install.js  package.json
npm/scripts/: install-spy-code-skill.sh  setup-mcp.js
plugins/jetbrains-spy-code/: README.md  build.gradle.kts
plugins/jetbrains-spy-code/src/main/kotlin/com/psyborg/spycode/actions/: FindCalleesAction.kt  FindCallersAction.kt  IndexAction.kt  SearchAction.kt
plugins/jetbrains-spy-code/src/main/kotlin/com/psyborg/spycode/services/: SpyCodeService.kt
plugins/jetbrains-spy-code/src/main/kotlin/com/psyborg/spycode/toolwindow/: SpyCodePanel.kt  SpyCodeToolWindowFactory.kt
plugins/nvim-spy-code/: README.md
plugins/nvim-spy-code/lua/spy-code/: init.lua  telescope.lua
python-package/: README.md  pyproject.toml
python-package/spy_code/: __init__.py  setup_mcp.py
scratch/: generate_graph.py
scripts/: build-dist.sh  bump_version.py  detect-environment.js  install-spy-code-skill.sh
skills/environments/: claude-skills.md  codex-skills.md  copilot-skills.md  cursor-skills.md  gemini-skills.md  opencode-skills.md  windsurf-skills.md
skills/universal/: call-graph-analysis.md  change-tracking.md  code-navigation.md  graph-visualization.md  semantic-search.md
spy-integration-core/: .eslintrc.json  package-lock.json  package.json
spy-integration-core/src/: index.ts
spy-integration-core/src/agent-hooks/: interface.ts
spy-integration-core/src/cache-manager/: index.ts
spy-integration-core/src/cli-bridge/: index.ts
spy-integration-core/src/event-bus/: index.ts
spy-integration-core/src/mcp-adapter/: client.ts
spy-integration-core/src/skill-engine/: skill-executor.ts  skill-loader.ts  skill-matcher.ts  skill-registry.ts
spy-integration-core/src/types/: index.ts
tests/fixtures/go_sample/: animals.go  math.go
tests/fixtures/python_sample/: animals.py  math.py  zoo.py
tests/fixtures/rust_sample/: math.rs  traits.rs
tests/fixtures/ts_sample/: animals.ts  math.ts
tests/integrations/: environment-detection.test.ts  mcp-config.test.ts  skills-validation.test.ts
