[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-code"
version = "0.1.0"
description = "GraphQL-style codebase intelligence CLI — index, query, and analyze any codebase"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["graphql", "cli", "codebase", "mcp", "code-intelligence", "ast"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Psyborgs-git/spy-code"
Repository = "https://github.com/Psyborgs-git/spy-code.git"
"Bug Tracker" = "https://github.com/Psyborgs-git/spy-code/issues"

[project.scripts]
spy-code = "spy_code:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spy_code*"]
exclude = []
