[package]
name = "spy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "spy-code"
path = "src/main.rs"

[dependencies]
spy-core = { workspace = true }
spy-storage = { workspace = true }
spy-indexer = { workspace = true }
spy-graph = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
