[package]
name = "spy-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
spy-storage = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
dirs = { workspace = true }
