[package]
name = "spy-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
spy-storage = { workspace = true }
spy-git = { workspace = true }
spy-parser = { workspace = true }
spy-resolvers = { workspace = true }
spy-embeddings = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
