[package]
name = "spy-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
spy-parser = { workspace = true }
spy-resolvers = { workspace = true }
spy-storage = { workspace = true }
spy-git = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = "3"
