[package]
name = "spy-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
spy-parser = { workspace = true }
spy-resolvers = { workspace = true }
spy-storage = { workspace = true }
spy-git = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
base64 = { version = "0.22.1", features = ["std"] }

[dev-dependencies]
tempfile = "3"
