[package]
name = "spy-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
tree-sitter = "0.26"
tree-sitter-rust = { workspace = true }
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
anyhow = { workspace = true }
