[package]
name = "spy-resolvers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
spy-parser = { workspace = true }
