[package]
name = "spy-resolvers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spy-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
blake3 = { workspace = true }
anyhow = { workspace = true }
tree-sitter-java = "0.23.5"

[dev-dependencies]
spy-parser = { workspace = true }
